Bluetooth yardımıyla etkili alan gelen araç tespiti ve sunucuya ek bilgiler ile bildirilmesi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="HICBIRINI_SEC">Hiçbirini Seç</string>
     <string name="GONDER">Gönder</string>
     <string name="SIL">Sil</string>
+    <string name="GONDERILDI">Gönderildi.</string>
 </resources>
