--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="GONDER">Gönder</string>
     <string name="SIL">Sil</string>
     <string name="GONDERILDI">Gönderildi.</string>
+    <string name="GONDERILMEDI">Gönderilmedi.</string>
 </resources>
