--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Noyan</string>
+    <string name="app_name">BLUE</string>
     <string name="geri">Geri</string>
     <string name="tv1">textview1111111111111</string>
     <string name="tv2">textview22222222222222222</string>
